--- a/2A/S8/Appli Web/tp/tp2-aw/annuaire/src/webcontent/index.html
+++ b/2A/S8/Appli Web/tp/tp2-aw/annuaire/src/webcontent/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
 <body>
-    <a href="ajoutPersonne.html"> ajouter Personne </a><br>
-    <a href="ajouterAdresse.html"> ajouter Adresse </a><br>
-    <a href="Serv?op=choix"> associer </a><br>
-    <a href="Serv?op=liste"> lister </a><br>
+
+<a href="ajoutpersonne.html">ajout personne</a><br>
+<a href="ajoutadresse.html">ajout adresse</a><br>
+<a href="Serv?op=associer">associer</a><br>
+<a href="Serv?op=lister">lister</a><br>
+
 </body>
+</html>
